# btab2mxml

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
btab/: btab_parser.py  btab_tokenizer.py  token.py
btab2mxml/: main.py
btab2mxml/btab/: btab_parser.py  btab_reader.py  btab_tokenizer.py  token.py
tablatures/: 2112-a_passage_to_bangkok.btab  2112-grand_finale.btab  2112-overture.btab  2112-soliloquy.btab  2112-the_twilight_zone.btab
tablatures/2112/: 2112-lessons.btab  2112-oracle_the_dream.btab  2112-presentation.btab  2112-tears.btab  2112-the_temples_of_syrinx.btab
tests/: test_btab_parser.py  test_btab_tokenizer.py
